==> tobbad/stm32f4disc_qpc_lcd/Src/bsp.c <==
#include <stdbool.h>
#include "main.h"
#include "qpc.h"
#include "bsp.h"
#include "../state_machine/AppSM.h"
#include "stm32f4xx.h"  /* CMSIS-compliant header file for the MCU used */
#include "stm32f4xx_ll_gpio.h"
#include "stm32f4xx_hal_rcc.h"
#include "stm32f4xx_ll_usart.h"

void BSP_init(void) {

    /* NOTE: SystemInit() already called from the startup code
    *  but SystemCoreClock needs to be updated
    */
    SystemCoreClockUpdate();

    /* Explictily Disable the automatic FPU state preservation as well as
    * the FPU lazy stacking
    */
    FPU->FPCCR &= ~((1U << FPU_FPCCR_ASPEN_Pos) | (1U << FPU_FPCCR_LSPEN_Pos));


    if (QS_INIT((void *)0) == 0U) { /* initialize the QS software tracing */
        Q_ERROR();
    }
    QS_OBJ_DICTIONARY(&l_SysTick);
    //QS_USR_DICTIONARY(PHILO_STAT);
    //QS_USR_DICTIONARY(COMMAND_STAT);
}

void BSP_ledOn(Ledsh_t ledNr) {
	if (ledNr==LEDSH_RED)
	{
		LL_GPIO_SetOutputPin(GPIOC, LDSH_Red_Pin);
	} else if (ledNr==LEDSH_GREEN)
	{
		LL_GPIO_SetOutputPin(GPIOC, LDSH_Green_Pin);
	}
}

void BSP_ledOff(Ledsh_t ledNr) {
	if (ledNr==LEDSH_RED)
	{
		LL_GPIO_ResetOutputPin(GPIOC, LDSH_Red_Pin);
	} else if (ledNr==LEDSH_GREEN)
	{
		LL_GPIO_ResetOutputPin(GPIOC, LDSH_Green_Pin);
	}
}

void BSP_displayPhilStat(uint8_t n, char const *stat) {
    (void)n;

    if (stat[0] == 'h') {
        LED_GPIO_PORT->BSRRL = LED3_PIN; /* turn LED on  */
    }
    else {
        LED_GPIO_PORT->BSRRH = LED3_PIN; /* turn LED off  */
    }
    if (stat[0] == 'e') {
        LED_GPIO_PORT->BSRRL = LED5_PIN; /* turn LED on  */
    }
    else {
        LED_GPIO_PORT->BSRRH = LED5_PIN; /* turn LED on  */
    }

    QS_BEGIN(PHILO_STAT, AO_Philo[n]) /* application-specific record begin */
        QS_U8(1, n);  /* Philosopher number */
        QS_STR(stat); /* Philosopher status */
    QS_END()          /* application-specific record end */
}

void BSP_displayPaused(uint8_t paused) {
    if (paused) {
        LED_GPIO_PORT->BSRRL = LED4_PIN; /* turn LED on  */
    }
    else {
        LED_GPIO_PORT->BSRRH = LED4_PIN; /* turn LED on  */
    }
}

uint8_t QS_onStartup(void const *arg) {

    (void)arg; /* avoid the "unused parameter" compiler warning */
    QS_initBuf(qsBuf, sizeof(qsBuf));
    QS_rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    LL_USART_EnableIT_RXNE(USART2);

    QS_tickPeriod_ = SystemCoreClock / BSP_TICKS_PER_SEC;
    QS_tickTime_ = QS_tickPeriod_; /* to start the timestamp at zero */

    /* setup the QS filters... */
    QS_FILTER_ON(QS_SM_RECORDS); /* state machine records */
    QS_FILTER_ON(QS_AO_RECORDS); /* active object records */
    QS_FILTER_ON(QS_UA_RECORDS); /* all user records */

    return (uint8_t)1; /* return success */
}
